# teloxide-ng

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DPTREE_GUIDE.md  Justfile  MIGRATION_GUIDE.md  README.md  RELEASE_PROCEDURE.md  triagebot.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/teloxide/: AGENTS.md  Cargo.toml
crates/teloxide-core/: AGENTS.md  Cargo.toml  README.md  schema.ron
crates/teloxide-core-ng/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
crates/teloxide-core-ng/examples/: erased.rs  self_info.rs
crates/teloxide-core-ng/src/: bot.rs  codegen.rs  errors.rs  lib.rs  local_macros.rs  payloads.rs  types.rs
crates/teloxide-core-ng/src/adaptors/: erased.rs  parse_mode.rs  throttle.rs  trace.rs
crates/teloxide-core-ng/src/adaptors/throttle/: settings.rs
crates/teloxide-core-ng/src/net/: download.rs
crates/teloxide-core-ng/src/payloads/: approve_suggested_post.rs  codegen.rs  decline_suggested_post.rs  get_chat_gifts.rs  send_message_draft.rs
crates/teloxide-core-ng/src/requests/: request.rs  requester.rs
crates/teloxide-core-ng/src/types/: accepted_gift_types.rs  callback_query.rs  chat_full_info.rs  chat_member.rs  chat_permissions.rs  checklist.rs  file.rs  forum_topic_created.rs  gift_background.rs  gift_info.rs  inline_keyboard_markup.rs  inline_query_result.rs  input_file.rs  me.rs  message.rs  owned_gift.rs  rgb.rs  sticker.rs  sticker_set.rs  transaction_partner.rs  unique_gift_info.rs  user.rs
crates/teloxide-core-ng/src/types/non_telegram_types/: until_date.rs
crates/teloxide-core/src/: bot.rs  codegen.rs  lib.rs  local_macros.rs  types.rs
crates/teloxide-core/src/adaptors/: cache_me.rs  erased.rs
crates/teloxide-core/src/adaptors/throttle/: requester_impl.rs
crates/teloxide-core/src/bot/: api.rs  download.rs
crates/teloxide-core/src/net/: download.rs
crates/teloxide-core/src/payloads/: copy_message.rs  forward_message.rs
crates/teloxide-core/src/requests/: json.rs  multipart.rs  requester.rs
crates/teloxide-core/src/types/: chat_full_info.rs  chat_member.rs  forum_topic.rs  gift.rs  keyboard_button.rs  message.rs  message_entity.rs  rgb.rs  sticker.rs  transaction_partner.rs  unique_gift.rs  unique_gift_colors.rs  update.rs  user_rating.rs
crates/teloxide-macros/: AGENTS.md
crates/teloxide-macros-ng/: AGENTS.md  CHANGELOG.md  Cargo.toml
crates/teloxide-macros-ng/src/: bot_commands.rs  command.rs  fields_parse.rs
crates/teloxide-macros/src/: command_attr.rs  command_enum.rs
crates/teloxide-ng/: AGENTS.md  Cargo.toml
crates/teloxide-ng/examples/: admin.rs  buttons.rs  chat_member_updates.rs  command.rs  db_remember.rs  deep_linking.rs  dialogue.rs  dispatching_features.rs  heroku_ping_pong.rs  inline.rs  middlewares.rs  middlewares_fallible.rs  ngrok_ping_pong.rs  purchase.rs  shared_state.rs  throw_dice.rs
crates/teloxide-ng/src/: dispatching.rs  error_handlers.rs  lib.rs  prelude.rs  utils.rs
crates/teloxide-ng/src/dispatching/: dialogue.rs  dispatcher.rs  distribution.rs  filter_ext.rs  handler_description.rs  handler_ext.rs
crates/teloxide-ng/src/dispatching/dialogue/: storage.rs
crates/teloxide-ng/src/dispatching/dialogue/storage/: in_mem_storage.rs  postgres_storage.rs  redis_storage.rs  serializer.rs  sqlite_storage.rs  trace_storage.rs
crates/teloxide-ng/src/sugar/: request.rs
crates/teloxide-ng/src/update_listeners/: polling.rs  webhooks.rs
crates/teloxide-ng/src/update_listeners/webhooks/: axum.rs
crates/teloxide-ng/src/utils/: command.rs  html.rs  markdown.rs  render.rs
crates/teloxide-ng/src/utils/render/: helper.rs  tag.rs
crates/teloxide-ng/tests/: command.rs  postgres.rs  redis.rs  sqlite.rs
crates/teloxide/src/dispatching/: handler_ext.rs
crates/teloxide/src/utils/: html.rs  markdown.rs
