[package]
name = "teloxide-macros-ng"
version = "0.10.1"
description = "The teloxide's procedural macros"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

documentation = "https://docs.rs/teloxide-macros-ng/"
# FIXME: add a simple readme for teloxide-macros
#readme = "README.md"

[lib]
proc-macro = true
name = "teloxide_macros_ng"

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0.67"
syn = { version = "2.0.96", features = ["full", "extra-traits"] }
heck = "0.5.0"

[package.metadata.release]
tag-prefix = "macros-"
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "## unreleased", replace = "## unreleased\n\n## {{version}} - {{date}}", exactly = 1 },
]
